<resources>
    <string name="app_name">Unify</string>

    <string name="posted_27_03_2">
        posted 27-03-2021 at 11:59 pm
    </string>

    <string name="unify">

Unify
</string>

    <string name="don_t_have_">Don\'t have an account? Contact your university for help.</string>

    <string name="attend">Attend</string>
    <string name="pen_id">

0
</string>
    <string name="abs_counter_id">

4
</string>
    <string name="course_name">

CS402
</string>
    <string name="overview">

Overview
</string>
    <string name="recent">

Recent
</string>

    <string name="recorded_on">

Recorded on 24-5-2021
</string>
    <string name="ta_ahmed_sa">

TA Ahmed Sameh
</string>
    <!-- strings.xml -->
    <string name="recent_penalties">

P
</string>

    <string name="click_to_en">

Click to end the attendance recording process and view attendees list
</string>

    <string name="username_in">

Course
</string>

    <string name="number_of_s">0 students attended </string>

    <string name="upcoming">

Upcoming
</string>

    <string name="assignment_">

Assignment One
</string>

    <string name="cs402">

CS402
</string>

    <string name="due_27_03_2">

Due 27-03-2021 at 11:59 pm
</string>

    <string name="done">

Done
</string>
    <string name="title">Deadlines you posted</string>
    <string name="add_a_new_d">

Add a new deadline
</string>

    <string name="group_number">G1</string>

    <string name="button_confirm_text">Confirm</string>
    <string name="button_add_text">Add</string>


    <string name="forums_home_post_title">forum title</string>
    <string name="forums_home_post_course_code">course code</string>
    <string name="forums_home_page_post_date">Posted DAY-MONTH-YEAR at HH:MM PM</string>
    <string name="forums_home_page_post_username">user name</string>
    <string name="forums_home_page_post_description">forum description</string>
    <string name="spinner_title">Filter</string>
    <string name="reply_user_name">user name</string>
    <string name="reply_date_time">Posted DAY-MONTH-YEAR at HH:MM PM</string>
    <string name="reply_content"> reply content</string>
    <string name="post_title">post title</string>
    <string name="course_code_post"> course code </string>
    <string name="forum_post_date_time">Posted DAY-MONTH-YEAR at HH:MM PM</string>
    <string name="publisher_name">user name</string>
    <string name="post_description">Post description</string>
    <string name="add_a_new_post">Add a new post</string>
    <string name="new_post_title">Title</string>
    <string name="new_post_course">Course</string>

</resources>