<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="6dp"
    android:layout_centerHorizontal="true"
    android:background="@drawable/recent_holder">

    <TextView
        android:id="@+id/recent_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="52dp"
        android:text="@string/course_name"
        android:textAppearance="@style/recent_course"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/recorded_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:text="@string/recorded_on"
        android:textAppearance="@style/recorded_on"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/recent_ta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:text="@string/ta_ahmed_sa"
        android:textAppearance="@style/ta_ahmed_sa"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="@string/recent_penalties"
        android:textAppearance="@style/recent_penalties"
        android:gravity="center_vertical"
        />
</RelativeLayout>