<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginTop="8dp"
    android:layout_centerHorizontal="true"
    android:layout_marginRight="6dp"
    android:layout_marginLeft="7dp"
    android:background="@drawable/absence_holder">


    <TextView
        android:id="@+id/course_abse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_vertical"
        android:text="@string/course_name"
        android:textAppearance="@style/course_name" />

    <TextView
        android:id="@+id/counter_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="53dp"
        android:layout_alignParentTop="true"
        android:text="@string/abs_counter_id"
        android:textAppearance="@style/abs_counter_id"
        android:gravity="end|center_vertical"
        />
    <TextView
        android:id="@+id/pen_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:layout_alignParentTop="true"
        android:text="@string/pen_id"
        android:textAppearance="@style/pen_id"
        android:gravity="end|center_vertical"

        />
</RelativeLayout>