<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@drawable/rectangle_2"
    android:id="@+id/forums_home_post_holder"
    >

<!--    post title text view -->
    <TextView
        android:id="@+id/forum_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/favourite_toggleButton"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/forums_home_post_title"
        android:textAppearance="@style/forums_home_post_title"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:ellipsize="end"
        />

<!--    course code text view -->
    <TextView
        android:id="@+id/course_code"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forum_title"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:text="@string/forums_home_post_course_code"
        android:textAppearance="@style/forums_home_post_course_code" />

<!--    posted date -->
    <TextView
        android:id="@+id/date"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/course_code"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="5dp"
        android:gravity="center_vertical"
        android:text="@string/forums_home_page_post_date"
        android:textAppearance="@style/forums_home_page_post_date" />

<!--    publisher's name-->
    <TextView
        android:id="@+id/user_name"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:text="@string/forums_home_page_post_username"
        android:textAppearance="@style/forums_home_page_post_username" />

<!--    Forum description-->
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/forums_home_page_post_description"
        android:textAppearance="@style/forums_home_page_post_description"
        android:maxLines="3"
        android:ellipsize="end"/>

<!--    Favorite toggle button -->
    <ToggleButton
        android:id="@+id/favourite_toggleButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/forum_favourite_false"
        android:textOn=""
        android:textOff=""/>

</RelativeLayout>