<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginTop="8dp"
    android:layout_centerHorizontal="true"
    android:background="@drawable/upcoming_holder">

    <TextView
        android:id="@+id/assignment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/assignment_"
        android:textAppearance="@style/assignment_"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/course_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:text="@string/cs402"
        android:textAppearance="@style/cs402"
        android:gravity="center_vertical"
        />

    <TextView
        android:id="@+id/due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:text="@string/due_27_03_2"
        android:textAppearance="@style/due_27_03_2"
        android:gravity="center_vertical"
        />

    <Button
        android:id="@+id/edit_deadline_date"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="19dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/ic_deadline_edit"/>

</RelativeLayout>