<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@+id/post_swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/post_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/forum_post">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/reply_edit"
            android:layout_marginBottom="8dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!--        post rectangle holder -->
                    <LinearLayout
                        android:id="@+id/post_rectangle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="10dp"
                        android:background="@drawable/rectangle_2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/post_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:text="@string/post_title"
                            android:textAppearance="@style/post_title"
                            android:gravity="center_vertical"
                            />

                        <TextView
                            android:id="@+id/course_code_post"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:gravity="center_vertical"
                            android:text="@string/course_code_post"
                            android:textAppearance="@style/course_code_post" />
                        <TextView
                            android:id="@+id/forum_post_date_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:text="@string/forum_post_date_time"
                            android:textAppearance="@style/forum_post_date_time"
                            android:gravity="center_vertical"
                            />
                        <TextView
                            android:id="@+id/publisher_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:text="@string/publisher_name"
                            android:textAppearance="@style/publisher_name"
                            android:gravity="center_vertical"
                            />
                        <TextView
                            android:id="@+id/forum_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginBottom="15dp"
                            android:text="@string/post_description"
                            android:textAppearance="@style/post_description"
                            android:gravity="top"
                            />

                    </LinearLayout>
                    <!--        comments recyclerview -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/posts_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/comment_area"
                        android:layout_below="@+id/post_rectangle"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="8dp"
                        android:scrollbars="vertical"/>
                    <TextView
                        android:id="@+id/empty_replies_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:visibility="gone"
                        android:text="No replies yet"
                        android:layout_below="@+id/posts_recycler_view"
                        android:layout_above="@+id/comment_area"
                        />

                </LinearLayout>
            </ScrollView>
        </androidx.core.widget.NestedScrollView>

        <!--       add comment section -->

        <EditText
            android:id="@+id/reply_edit"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_toLeftOf="@+id/reply_button"
            android:layout_marginRight="16dp"
            android:layout_above="@+id/bottom_navigation"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="15dp"
            android:inputType="textMultiLine|textCapSentences"
            android:background="@drawable/reply_editt"
            android:hint="reply"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:gravity="center_vertical"/>

        <Button
            android:id="@+id/reply_button"
            android:layout_width="27dp"
            android:layout_height="23dp"
            android:layout_above="@+id/bottom_navigation"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="33dp"
            android:background="@drawable/reply_button"
            />

        <!--        bottom navigation -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            app:itemIconTint="#FFFFFF"
            app:itemTextColor="#FFFFFF"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/my_navigation_items"
            />
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>